--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -16,33 +16,50 @@ This list is not complete - to be added to and checked off by everyone.
 - Complete all testing (Kristen and Luke, TBD)
     Done enough, will add tests as issues arise.
 - Source code completed, ASCII files, with formatted help files and be packaged for easy installation. 
-    Still to do.
+    Work in progress.
 - Submit package to CRAN - including JSS submission as vignettes in the package. 
 - Make sure all functions still work when specifying one outcome (Kristen)
      Done  
 - Issue: when estimating lower-level sample sizes, it's possible for range of sample sizes to produce same power. Kristen refining returned objected to contain information of issue. Luke refining diagnostic plot. Kristen working with Zarni to return note in Shiny, along with revised version of info in vignette. 
 - Luke has added return of all call parameters. Refining formatting. 
-- Vignettes expanding to demonstrate functionality. 
+- Vignettes expanding to demonstrate functionality.
+    Done
 - Add functions for expanded designs with same power - e.g. need to add d3.2_m3fc2rc - same power as d3.2_m3ff2rc
+    Done
 - Change d1.1_m2cc to d1.1_m1c (and Kristen will check first)
+    Done
 - Kristin will send nots about credit - including ies grant number.
 
 ## Kristen's todo list
+
+Priority 1
+
+- edits on shiny documentation
+- search for papers in JSS
+- write conclusion
+
+Priority 2
+
+- set up Jonathan S for testing
+- add flag for flat power curve to help with shiny app, work with Zarni to incorporate help procedure
+
+Priority 3
+
 - once sample size code is stable, rerun all validation
 - understand unit test with correlated outcomes
-- add flag for flat power curve to help with shiny app, work with Zarni to incorporate help procedure
-- implement d3.2_m2fc2rc, update d1.1_m2cc to d1.1_m1c
-- remove just_results_table_flag
-- hash out power definitions: unadjusted p-values for complete power, whether or not to include zero outcomes for min power, complete power
-- set up Jonathan S for testing
-- update sample size vignette
-- two tailed for MDES?
 - update description file
 - update WY documentation
 - recruit Evan as reader
-- search for papers in JSS
 - WY follow up: WY with a small number of schools, large number of permutations, and no effect, do we get the intended power/p-value?  What if we don’t do any adjustment–is it because of divergent/unstable models?
-- reorganize appendix to be more oriented for package
+
+
+### Discussion questions
+- hash out power definitions: unadjusted p-values for complete power, whether or not to include zero outcomes for min power, complete power
+- one tailed v. two tailed power
+- update() for pump_sample, pump_mdes
+- threshold for flatness?
+- why are we hiding vignette output?
+- better name for "design" because it currently means design + model. Scenario?
 
 # Shiny app
 - Aim to have draft to share in next meeting
