--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -30,34 +30,13 @@ This list is not complete - to be added to and checked off by everyone.
     Done
 - Kristin will send nots about credit - including ies grant number.
 
-## Kristen's todo list
 
-Priority 1
+# Discussion questions
 
-- edits on shiny documentation
-- search for papers in JSS
-- write conclusion
-
-Priority 2
-
-- set up Jonathan S for testing
-- add flag for flat power curve to help with shiny app, work with Zarni to incorporate help procedure
-
-Priority 3
-
-- once sample size code is stable, rerun all validation
-- understand unit test with correlated outcomes
-- update description file
-- update WY documentation
-- recruit Evan as reader
-- WY follow up: WY with a small number of schools, large number of permutations, and no effect, do we get the intended power/p-value?  What if we don’t do any adjustment–is it because of divergent/unstable models?
-
-
-### Discussion questions
+- (written by Kristen)
 - hash out power definitions: unadjusted p-values for complete power, whether or not to include zero outcomes for min power, complete power
 - one tailed v. two tailed power
 - update() for pump_sample, pump_mdes
-- threshold for flatness?
 - why are we hiding vignette output?
 - better name for "design" because it currently means design + model. Scenario?
 
@@ -88,7 +67,6 @@ Priority 3
 # Stretch goals
 - Potentially use simulations to estimate rho matrix for users when entering other information about data - corr between outcomes, R2's (Kristen, maybe, TBD)
 - tool that helps user build a block matrix of correlations based on a list of correlations between outcomes
-- tool the helps user determine correlation between test statistics using simulation
 - resolve terminology: MDES, ES, ATE_ES, impact?
 - additional designs, including: d3.3_2mff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors
 - for sample size, allow a vector of MDES, i.e. combination of zero and nonzero values, and allow for numZero flag
